--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Responsive Portfolio 3</title>
 </head>
 <body>
-    <section></section>
+    <section class=""></section>
 </body>
 </html>
