--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Responsive Portfolio 3</title>
 </head>
 <body>
-   
+   <div class="toggle" onclick="toggleMenu();"></div>
+
+   <section class="banner" id="home">
+
+    <div class="imgSidebar">
+        <img src="https://loremflickr.com/773/1152/4k?lock=1" alt="">
+    </div>
+     <div class="contentBx">
+        <h5 class="logoText">My_Portfolio</h5>
+        <div>
+            <h4><span>Hello</span> I'm</h4>
+            <h2>Rico Miller</h2>
+            <h4>I'm a Full Stack Web Developer</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ab ipsum, dignissimos id nesciunt ex repellendus numquam provident praesentium officiis qui distinctio fuga ad aliquid excepturi vitae, facilis culpa ea similique temporibus? Aperiam animi cupiditate illo aliquam dicta, voluptates quasi eaque dolor at debitis voluptatibus.</p>
+            <a href="#" class="btn">About Me</a>
+        </div>
+     </div>
+   </section>
+
+
+   <script src="script.js"></script>
 </body>
 </html>
