--- a/index.html
+++ b/index.html
@@ -24,9 +24,30 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ab ipsum, dignissimos id nesciunt ex repellendus numquam provident praesentium officiis qui distinctio fuga ad aliquid excepturi vitae, facilis culpa ea similique temporibus? Aperiam animi cupiditate illo aliquam dicta, voluptates quasi eaque dolor at debitis voluptatibus.</p>
             <a href="#" class="btn">About Me</a>
         </div>
+        <ul class="sci">
+            <li><a href="#"><img src="/images/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="/images/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="/images/instagram.png" alt=""></a></li>
+        </ul>
      </div>
    </section>
 
+   <section class="about" id="about">
+       <div class="title">
+           <h2>About Us</h2>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, numquam?</p>
+       </div>
+   </section>
+
+   <div class="sidebar">
+       <ul class="menu">
+           <li><a href="#">Home</a></li>
+           <li><a href="#">About</a></li>
+           <li><a href="#">Services</a></li>
+           <li><a href="#">Work</a></li>
+           <li><a href="#">Contact</a></li>
+       </ul>
+   </div>
 
    <script src="script.js"></script>
 </body>
