--- a/index.html
+++ b/index.html
@@ -33,19 +33,70 @@
    </section>
 
    <section class="about" id="about">
-       <div class="title">
+       <div class="title white">
            <h2>About Us</h2>
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, numquam?</p>
        </div>
+       <div class="content">
+           <div class="textBx">
+               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id et quos, omnis tempore natus esse asperiores maxime officia vel autem eos sunt possimus reiciendis, commodi porro dolorem, quibusdam non nesciunt alias consequuntur. Iusto assumenda ullam ipsum natus velit beatae molestiae nam sint est repellat officia eaque hic voluptates, dolorem voluptas molestias eum quisquam architecto. Quasi tempora obcaecati neque magni quos.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque atque reiciendis veniam voluptatem ab, nam possimus? Hic, error, ducimus labore magni quae assumenda reiciendis quam quia temporibus ullam nulla eum.</p>
+           </div>
+           <div class="imgBx">
+               <img src="https://loremflickr.com/832/600/4k?lock=1" alt="">
+           </div>
+       </div>
+   </section>
+
+   <section class="services" id="services">
+    <div class="title">
+        <h2>Our Services</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt.</p>
+    </div>
+    <div class="content">
+        <div class="servicesBx">
+            <img src="/images/icon1.png" alt="">
+            <h2>Web Design</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+        <div class="servicesBx">
+            <img src="/images/icon2.png" alt="">
+            <h2>Web Development</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+        <div class="servicesBx">
+            <img src="/images/icon3.png" alt="">
+            <h2>Android Apps</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+        <div class="servicesBx">
+            <img src="/images/icon4.png" alt="">
+            <h2>Photography</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+        <div class="servicesBx">
+            <img src="/images/icon5.png" alt="">
+            <h2>Content Writing</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+        <div class="servicesBx">
+            <img src="/images/icon6.png" alt="">
+            <h2>Video Editing</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo fugiat laboriosam.</p>
+        </div>
+    </div>
+   </section>
+
+   <section class="work" id="work">
+       
    </section>
 
    <div class="sidebar">
        <ul class="menu">
-           <li><a href="#">Home</a></li>
-           <li><a href="#">About</a></li>
-           <li><a href="#">Services</a></li>
-           <li><a href="#">Work</a></li>
-           <li><a href="#">Contact</a></li>
+           <li><a href="#home" onclick="toggleMenu();">Home</a></li>
+           <li><a href="#about" onclick="toggleMenu();">About</a></li>
+           <li><a href="#services" onclick="toggleMenu();">Services</a></li>
+           <li><a href="#" onclick="toggleMenu();">Work</a></li>
+           <li><a href="#" onclick="toggleMenu();">Contact</a></li>
        </ul>
    </div>
 
