--- a/index.html
+++ b/index.html
@@ -87,6 +87,79 @@
    </section>
 
    <section class="work" id="work">
+    <div class="title">
+        <h2>Recent Work</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt.</p>
+    </div>
+    <div class="content">
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img1.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 01</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img2.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 02</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img3.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 03</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img4.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 04</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img5.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 05</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img6.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 06</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img7.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 07</h3>
+            </div>
+        </div>
+        <div class="workBx">
+            <div class="imgBx">
+                <img src="/images/img8.jpg" alt="">
+            </div>
+            <div class="textBx">
+               <h3>Project 08</h3>
+            </div>
+        </div>
+    </div>
+   </section>
+
+   <section class="contact" id="contact">
        
    </section>
 
@@ -95,7 +168,7 @@
            <li><a href="#home" onclick="toggleMenu();">Home</a></li>
            <li><a href="#about" onclick="toggleMenu();">About</a></li>
            <li><a href="#services" onclick="toggleMenu();">Services</a></li>
-           <li><a href="#" onclick="toggleMenu();">Work</a></li>
+           <li><a href="#work" onclick="toggleMenu();">Work</a></li>
            <li><a href="#" onclick="toggleMenu();">Contact</a></li>
        </ul>
    </div>
