--- a/index.html
+++ b/index.html
@@ -160,7 +160,28 @@
    </section>
 
    <section class="contact" id="contact">
-       
+    <div class="title white">
+        <h2>Contact Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt.</p>
+    </div>
+    <div class="contactForm">
+        <div class="row">
+            <div class="col50">
+                <input type="text" name="" placeholder="First Name">
+            </div>
+            <div class="col50">
+                <input type="text" name="" placeholder="Last Name">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col50">
+                <input type="text" name="" placeholder="E-Mail">
+            </div>
+            <div class="col50">
+                <input type="text" name="" placeholder="Cellphone">
+            </div>
+        </div>
+    </div>
    </section>
 
    <div class="sidebar">
@@ -169,7 +190,7 @@
            <li><a href="#about" onclick="toggleMenu();">About</a></li>
            <li><a href="#services" onclick="toggleMenu();">Services</a></li>
            <li><a href="#work" onclick="toggleMenu();">Work</a></li>
-           <li><a href="#" onclick="toggleMenu();">Contact</a></li>
+           <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
        </ul>
    </div>
 
