--- a/index.html
+++ b/index.html
@@ -178,11 +178,25 @@
                 <input type="text" name="" placeholder="E-Mail">
             </div>
             <div class="col50">
-                <input type="text" name="" placeholder="Cellphone">
+                <input type="text" name="" placeholder="Mobile No.">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col100">
+               <textarea placeholder="Message"></textarea>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col100">
+                <input type="submit" value="Send">
             </div>
         </div>
     </div>
    </section>
+
+   <div class="copyright">
+       <p>Copyright &copy; 2022 Designed By Online Tutorials Developed By <a href="https://twitter.com/rico042002">@Rico042002</a></p>
+   </div>
 
    <div class="sidebar">
        <ul class="menu">
