commit 10-Final commit

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h4><span>Hello</span> I'm</h4>
             <h2>Rico Miller</h2>
             <h4>I'm a Full Stack Web Developer</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ab ipsum, dignissimos id nesciunt ex repellendus numquam provident praesentium officiis qui distinctio fuga ad aliquid excepturi vitae, facilis culpa ea similique temporibus? Aperiam animi cupiditate illo aliquam dicta, voluptates quasi eaque dolor at debitis voluptatibus.</p>
-            <a href="#" class="btn">About Me</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="#about" class="btn">About Me</a>
         </div>
         <ul class="sci">
             <li><a href="#"><img src="/images/facebook.png" alt=""></a></li>
